@@ -1,4 +1,14 @@
 ------------------------------------------------------------------------
+r2088 | gaser | 2022-08-15 12:25:36
+
+Changed paths:
+ M CHANGES.txt
+ M cat_conf_tools.m
+ M cat_stat_spm2x.m
+
+
+Changed: Updated help text.
+------------------------------------------------------------------------
 r2087 | gaser | 2022-08-12 17:28:21
 
 Changed paths:
